index page complete

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "so-arq-app",
+    "name": "Check in work",
     "slug": "so-arq-app",
     "version": "1.0.0",
     "orientation": "portrait",
