--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
     "@react-navigation/native-stack": "6.2.5",
     "axios": "0.25.0",
     "expo": "44.0.0",
+    "expo-font": "10.0.4",
     "expo-status-bar": "1.2.0",
+    "expo-updates": "~0.11.6",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-modal-datetime-picker": "13.0.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.10.1",
-    "react-native-web": "0.17.1",
-    "expo-font": "10.0.4",
-    "expo-updates": "~0.11.6"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
